[package]
name = "ril"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2.8.6"
pest_derive = "2.8.6"
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
anyhow = "1"
crossbeam-channel = "0.5.15"
arrow = "58.1.0"
pyo3-arrow = "0.17.0"
clap = { version = "4.6.1", features = ["derive"] }
